# trip_tracker

./: .gitignore  Cargo.toml  Readme.md  gps_track.proto  install.sh  justfile
data/gpx/: WelcomeToGeorgia.gpx  Yerevan_i_sol.gpx
data_management/: Cargo.toml
data_management/src/: data_manager.rs  geonames.rs  gpx_util.rs  lib.rs  main.rs  tsf_util.rs
data_management/src/buffer/: buffer.rs  buffer_manager.rs
data_management/src/database/: constants.rs  db.rs
embedded_tracker_esp32-s3/: Cargo.toml  mccmcn.csv  schematic.kicad_sch  todo.txt
embedded_tracker_esp32-s3/.cargo/: config.toml
embedded_tracker_esp32-s3/sd_content/: CONFIG.CFG  STATE.CSV
embedded_tracker_esp32-s3/src/: actor.rs  byte_buffer.rs  configuration.rs  lib.rs  log.rs  service.rs  system_control.rs
embedded_tracker_esp32-s3/src/services/: gnss.rs  gnss_service.rs  mod.rs  state.rs  state_service.rs  storage.rs  storage_service.rs
embedded_tracker_esp32-s3/src/services/comms/: connection_buffer.rs  mac_provider.rs  mod.rs  upload_service.rs  upload_status.rs
embedded_tracker_esp32-s3/src/services/modem/: mod.rs  modem.rs  modem_service.rs  urc_subscriber_set.rs
embedded_tracker_esp32-s3/src/services/network/: mod.rs  upload.rs
esp32_gps_tracker/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/css/: style.css
frontend/src/: api.rs  main.rs  trip_data.rs  util.rs
frontend/src/components/: admin_panel.rs  control.rs  map_component.rs  mod.rs  panel.rs  panel_component.rs
server/: Cargo.toml  build.rs  database.db
server/src/: lib.rs  main.rs  server_state.rs  tracker_endpoint.rs
server/src/core/: db.rs  gpx_util.rs  mod.rs
server/src/data/: mod.rs  track_point.rs  track_session.rs  trip.rs  user.rs
test_data/: syddjurs.gpx
trip_tracker_data_management/: Cargo.toml
trip_tracker_data_management/src/: data_manager.rs  gpx_util.rs  lib.rs  main.rs  tsf_util.rs
trip_tracker_data_management/src/buffer/: buffer.rs  buffer_manager.rs  mod.rs
trip_tracker_data_management/src/database/: constants.rs  db.rs  mod.rs
trip_tracker_lib/: Cargo.toml
trip_tracker_lib/src/: comms.rs  lib.rs  track_point.rs  track_session.rs  traffic.rs  trip.rs
