[package]
name = "data_management"
version = "0.1.0"
edition = "2024"

[dependencies]
trip_tracker_lib = { path = "../trip_tracker_lib", features = ["sqlx", "std"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bincode = "1.3.3"
tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"]}
sqlx = { version = "0.8.2", features = [ "sqlite", "chrono", "runtime-tokio", "tls-native-tls" ] }
chrono = { version = "0.4.39", features = ["serde"]}
time = "0.3.40"
project-root = "0.2.2"
const_format = "0.2.34"
gpx = "0.10.0"
rand = "0.9.0"
hex = "0.4.3"
celes = {version = "2.6.0" }
geojson = { version = "0.24.2" }
geo = { version = "0.30.0" }
reqwest = { version = "0.12.15", features = ["json"] }
json = "0.12.4"
clap = {version = "4.5.38", features = ["derive"] }