[package]
name = "embedded_tracker_esp32-s3"
version = "0.1.0"
edition = "2021"
default-run = "async_main"

[dependencies]
trip_tracker_lib = { path = "../trip_tracker_lib" }
embassy-sync     = "0.6.2"
embassy-futures = "0.1.1"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = "0.8.1"
itoa = "1.0.14"
ryu = "1.0.19"
chrono = { version = "0.4.39", default-features = false }
async-trait = "0.1.86"
#hmac = "0.12.1"
#sha2 = "0.10.8"

# From template
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
  #  "panic-handler",
    "println",
]}

esp-hal = { version = "0.22.0", features = [
    "esp32s3",
] }
esp-println = { version = "0.12.0", features = ["esp32s3"] }
esp-alloc = { version = "0.5.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"

heapless = { version = "0.8.0", default-features = false }
embassy-executor = { version = "0.6.0",  features = [
    "nightly"
] }
embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.5.0",  features = ["esp32s3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
