[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
trip_tracker_lib = { path = "../trip_tracker_lib", features = ["std"] }
bincode = "1.3.3"
chrono = "0.4.39"
celes = {version = "2.6.0" }

yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
yew-agent = { version = "0.3.0" }
implicit-clone = "0.5.0"
leaflet = "0.4.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
gloo-net = "0.6.0"
prost = "0.13.4"
prost-types = "0.13.4"
serde = { version = "1.0.219" }
futures = "0.3.31"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlAnchorElement", "console", "Window", "Document"]

[build-dependencies]
prost-build = "0.13.4"