[package]
name = "server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
geo-types = { version = "0.7.14", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.135"
bincode = "1.3.3"
prost = "0.13.4"
prost-types = "0.13.4"
base64 = "0.22.1"
project-root = "0.2.2"

sqlx = { version = "0.8.2", features = [ "sqlite", "chrono", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"]}
axum = { version = "0.8.1", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[build-dependencies]
prost-build = "0.13.4"