[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
trip_tracker_lib = { path = "../trip_tracker_lib", features = ["std"] }
trip_tracker_data_management = { path = "../trip_tracker_data_management" }
gpx = "0.10.0"
local-ip-address = "0.6.3"
sha2 = { version = "0.10", default-features = false }
bimap = "0.6.3"

geo-types = { version = "0.7.14", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.135"
bincode = "1.3.3"
base64 = "0.22.1"
rand = "0.9.0"

tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"]}
axum = { version = "0.8.1", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"