[package]
name = "trip_tracker_data_management"
version = "0.1.0"
edition = "2024"

[dependencies]
trip_tracker_lib = { path = "../trip_tracker_lib", features = ["sqlx"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bincode = "1.3.3"
tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"]}
sqlx = { version = "0.8.2", features = [ "sqlite", "chrono", "runtime-tokio", "tls-native-tls" ] }
chrono = { version = "0.4.39", features = ["serde"]}
project-root = "0.2.2"
const_format = "0.2.34"
gpx = "0.10.0"