[package]
name = "trip_tracker_lib"
version = "0.1.0"
edition = "2021"

[features]
sqlx = ["dep:sqlx"]
std = ["dep:serde", "dep:serde_json", "dep:project-root", "dep:base64", "dep:geo-types", "dep:bincode"]

[dependencies]
geo-types = { version = "0.7.14", features = ["serde"], optional = true }
chrono = { version = "0.4.39", default-features = false, features = ["serde"]}
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = {version = "1.0.135", optional = true }   
bincode = { version = "1.3.3", optional = true }
base64 = { version = "0.22.1", optional = true }
project-root = {version = "0.2.2", optional = true }

sqlx = { version = "0.8.2", features = [ "sqlite", "chrono"], optional = true }